# SoftMapGeneration

./: .gitignore  LICENSE  README.md  auto3dgm-lite.py  example.py  pyproject.toml
softmap/: __init__.py  core.py
